# ex3_oop_image

./: CMakeLists.txt  README.txt
include/: CMakeLists.txt  Image.h  ImageDataStructure.h  Pixel.h  macros.h
src/: CMakeLists.txt  Image.cpp  ImageDataStructure.cpp  Pixel.cpp  macros.cpp  main.cpp
tests/: CMakeLists.txt  ImageTests.cpp  PixelTests.cpp
